# sorting-visualization

./: .gitignore  Cargo.toml  NOTES.md  README.md
sorts/src/: bubble_sort.rs  insertion_sort.rs  lib.rs  merge_sort.rs  quick_sort.rs  sorting.rs
src/: bubble_sort.rs  controller.rs  insertion_sort.rs  lib.rs  main.rs  merge_sort.rs  model.rs  quicksort.rs  settings.rs  sorting.rs  utils.rs  view.rs
