[package]
name = "sorting-tests"
version = "0.1.0"
authors = ["Vlad Lytvynenko <sir.sagramor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "main"

[dependencies]
rand = "0.8.4"
nannou = "0.17"
palette = "0.5"
